# Ralph-Workflow-Mirror

./: .claude_commit_message.xml  .commit_message.json  .gitignore  .mcp.json  .plan  .stylelintrc.cjs  .woodpecker.yml  1  404.html  AGENTS.md  BUILD_SETUP_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_STABILIZATION_REPORT.md  HARDENING_STATUS.md  JSON_STREAMING_IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  PROMPT.md  QUEUE_INTEGRATION_ANALYSIS.md  README.md  REDUCER_PROGRESS.md  REDUCER_STATUS.md  SECURITY.md  TECH_DEBT_COMPLETION_STATUS.md  TECH_DEBT_REFACTORING.md  TECH_DEBT_STATUS.md  TYPESCRIPT_CONVERSION.md  \  capture-final-screenshots.js  capture-screenshots.js  clippy.toml  commit_message.txt  faq.html  fix_1.txt  getting-started.html  how-it-works.html  (+22 more)
ralph-workflow/: Cargo.toml  PROMPT.md  README.md  clippy.toml  test_multiline  test_multiline2  test_multiline_backslash  test_raw_newline  test_simple2
ralph-workflow/examples/: agents.toml  ralph-workflow.toml
ralph-workflow/src/: banner.rs  colors.rs  executor.rs  interrupt.rs  lib.rs  main.rs  output.rs  platform.rs  timer.rs  utils.rs  workspace.rs
ralph-workflow/src/agents/: ccs.rs  ccs_env.rs  config.rs  error.rs  fallback.rs  mod.rs  opencode_resolver.rs  parser.rs  registry.rs  retry_timer.rs  validation.rs
ralph-workflow/src/app/: config_init.rs  context.rs  detection.rs  effect.rs  effect_handler.rs  effectful.rs  event_loop.rs  finalization.rs  mock_effect_handler.rs  mod.rs  orchestrator.rs  phase_runners.rs  plumbing.rs  rebase.rs  resume.rs  runner.rs  validation.rs
ralph-workflow/src/benchmarks/: baselines.rs  checkpoint_serialization.rs  memory_usage.rs  mod.rs  regression_tests.rs
ralph-workflow/src/checkpoint/: builder.rs  builder.rs.bak  execution_history.rs  file_state.rs  mod.rs  recovery.rs  restore.rs  run_context.rs  size_monitor.rs  state.rs  string_pool.rs  validation.rs
ralph-workflow/src/cli/: args.rs  completions.rs  init.rs  mod.rs  presets.rs  providers.rs  security.rs  utils.rs
ralph-workflow/src/cloud/: heartbeat.rs  mock.rs  mod.rs  redaction.rs  reporter.rs  types.rs
ralph-workflow/src/common/: mod.rs  utils.rs
ralph-workflow/src/config/: loader.rs  mod.rs  parser.rs  path_resolver.rs  truncation.rs  types.rs  unified.rs  validation.rs
ralph-workflow/src/container/: codex.rs  config.rs  engine.rs  error.rs  executor.rs  image.rs  mod.rs  network.rs  port.rs  tool.rs  user_executor.rs  volume.rs
ralph-workflow/src/diagnostics/: agents.rs  mod.rs  system.rs
ralph-workflow/src/executor/: executor_trait.rs  mock.rs  mod.rs  real.rs  types.rs
ralph-workflow/src/files/: agent_files.rs  integrity.rs  llm_output_extraction.rs  mod.rs  monitoring.rs  recovery.rs  result_extraction.rs  validation.rs
ralph-workflow/src/git_helpers/: branch.rs  hooks.rs  identity.rs  mod.rs  ops.rs  rebase.rs  rebase_checkpoint.rs  rebase_state_machine.rs  repo.rs  review_baseline.rs  start_commit.rs  test_trait.rs  tests.rs  wrapper.rs
ralph-workflow/src/guidelines/: base.rs  functional.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  stack.rs  systems.rs
ralph-workflow/src/json_parser/: README.md  claude.rs  claude_tests.rs  codex.rs  codex_tests.rs  deduplication.rs  delta_contract.rs  delta_display.rs  event_queue.rs  gemini.rs  gemini_tests.rs  health.rs  incremental_parser.rs  mod.rs  opencode.rs  opencode_tests.rs  printer.rs  stream_classifier.rs  streaming_state.rs  terminal.rs  tests.rs  types.rs
ralph-workflow/src/language_detector/: common.rs  core.rs  extensions.rs  mod.rs  scanner.rs  signatures.rs  tests.rs
ralph-workflow/src/logger/: loggable.rs  logger_impl.rs  mod.rs  output.rs  output_formatting.rs  progress.rs  test_logger.rs
ralph-workflow/src/logging/: event_loop_logger.rs  mod.rs  run_id.rs  run_log_context.rs
ralph-workflow/src/monitoring/: memory_metrics.rs  mod.rs
ralph-workflow/src/phases/: commit.rs  commit_logging.rs  common.rs  context.rs  development.rs  integrity.rs  mod.rs  review.rs
ralph-workflow/src/pipeline/: clipboard.rs  fallback.rs  idle_timeout.rs  logfile.rs  mod.rs  model_flag.rs  prompt.rs  runner.rs  tests.rs  (+3 more)
ralph-workflow/tests/: .gitignore  DO_NOT_USE.txt
tests/: Cargo.toml  INTEGRATION_TESTS.md  PROMPT.md  cli_smoke.rs  clippy.toml  commit_message_generation.rs  container_mode.rs  deduplication_integration_tests.rs  git_workflow.rs  lib.rs  main.rs  mcp_access.rs  printer.rs  security_isolation.rs  test_prompt_backup.rs  test_support.rs  user_account_mode.rs  workflow_cleanup_tests.rs  workflow_commit_tests.rs  workflow_config_tests.rs  workflow_plan_tests.rs  workflow_requirements.rs  workflow_review_tests.rs
tests/integration_tests/: _TEMPLATE.rs  agent_chain_normalization.rs  agent_spawn_errors.rs  awaiting_dev_fix_recovery.rs  ccs_all_delta_types_spam_reproduction.rs  ccs_ansi_stripping_console.rs  ccs_ansi_stripping_waterfall.rs  ccs_basic_mode_nuclear_test.rs  ccs_comprehensive_spam_verification.rs  ccs_delta_spam_systematic_reproduction.rs  ccs_extreme_streaming_regression.rs  ccs_nuclear_full_log_regression.rs  ccs_nuclear_spam_test.rs  ccs_real_world_log_regression.rs  ccs_streaming_edge_cases.rs  ccs_streaming_spam_all_deltas.rs  ccs_wrapping_comprehensive.rs  ccs_wrapping_waterfall_reproduction.rs  codex_duplicate_item_completed.rs  codex_parser_tests.rs  codex_reasoning_spam_regression.rs  compliance_check.sh  development_xml_validation.rs  dylint_target.rs  event_loop_trace_dump.rs  fix_xml_validation.rs  gemini_parser_tests.rs  gitignore_enforcement.rs  logging_per_run.rs  loop_detection_after_additional_events.rs  loop_detection_recovery.rs  main.rs  no_string_errors_check.sh  no_test_flags_check.sh  opencode_parser_tests.rs  opencode_usage_limit_detection.rs  prompt_path_resolution.rs  prompt_permissions.rs  reducer_agent_fallback.rs  reducer_effect_invariants.rs  (+24 more)
tests/parsing_test_corpus/: mod.rs
tests/process_system_tests/: main.rs
tests/system_tests/: SYSTEM_TESTS.md  common.rs  main.rs  prompt_permissions.rs  test_timeout.rs
(+1332 files in other folders)
