[package]
name = "ralph"
version = "0.2.9"
edition = "2021"
description = "PROMPT-driven multi-agent orchestrator for git repos"
authors = ["Ralph Authors"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://codeberg.org/mistlight/RalphWithReviewer"
homepage = "https://codeberg.org/mistlight/RalphWithReviewer"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# JSON parsing with serde (100x faster than jq spawns)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = "0.4"

# Environment and process management
which = "6.0"

# Cross-platform home/config directory resolution
dirs = "5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# TOML parsing for agent configuration files
toml = "0.8"

# Regex for pattern matching
regex = "1.10"

# Lazy initialization for statics
once_cell = "1.19"

# Parse shell-like command strings (quotes/escapes) into argv
shell-words = "1.1"

# Tempfile for creating temporary directories
tempfile = "3.10"

# Signal handling for cleanup on Ctrl+C
ctrlc = "3.4"

# Git library for direct git operations (bypasses CLI)
git2 = "0.18"

[dev-dependencies]
# Testing utilities
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
strip = true
