[workspace]
members = ["ralph-workflow", "test-helpers", "tests"]
default-members = ["ralph-workflow", "test-helpers"]
resolver = "2"

[workspace.metadata.test-workspace]
# Integration tests are in a separate workspace
test-members = ["tests"]

[workspace.dependencies]
# Shared dependencies for all workspace members
git2 = "0.18"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
