[package]
name = "ralph-workflow"
version = "0.3.11"
edition = "2021"
description = "PROMPT-driven multi-agent orchestrator for git repos"
authors = ["Mistlight"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://codeberg.org/mistlight/RalphWithReviewer"
homepage = "https://codeberg.org/mistlight/RalphWithReviewer"
keywords = ["ai", "agent", "git", "workflow", "automation"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ralph_workflow"
path = "src/lib.rs"

[[bin]]
name = "ralph"
path = "src/main.rs"

[features]
# INTEGRATION TEST GOES OUTSIDE OF THIS PACKAGE LOOK IN THE PARENT DIRECTORY
default = []
# Export test utilities for integration tests (TestPrinter, parser test methods)
test-export = []

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# JSON parsing with serde (100x faster than jq spawns)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = "0.4"

# Environment and process management
which = "6.0"

# Cross-platform home/config directory resolution
dirs = "5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# TOML parsing for agent configuration files
toml = "0.8"

# Regex for pattern matching
regex = "1.10"

# Parse shell-like command strings (quotes/escapes) into argv
shell-words = "1.1"

# Tempfile for creating temporary directories
tempfile = "3.10"

# Signal handling for cleanup on Ctrl+C
ctrlc = "3.4"

# Git library for direct git operations (bypasses CLI)
git2 = "0.18"

# File system monitoring for PROMPT.md protection
notify = "6.1"

[dev-dependencies]
# Testing utilities
tempfile = "3.10"
test-helpers = { path = "../test-helpers" }
