[package]
name = "ralph-workflow-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration"
path = "main.rs"

[dependencies]
ralph-workflow = { path = "../ralph-workflow", features = ["__test_export"] }
serde_json = "1"
test-helpers = { path = "../test-helpers" }
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3"
git2 = "0.18"
