[package]
name = "ralph-workflow-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration_tests"
path = "integration_tests/main.rs"

[dependencies]
ralph-workflow = { path = "../ralph-workflow" }
serde_json = "1"
test-helpers = { path = "../test-helpers" }
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3"
git2 = "0.18"
