[package]
name = "ralph-workflow-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration_tests"
path = "integration_tests/main.rs"

[[test]]
name = "ralph-workflow-system-tests"
path = "system_tests/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ralph-workflow = { path = "../ralph-workflow", features = ["test-utils"] }
serde_json = "1"
test-helpers = { path = "../test-helpers" }
tempfile = "3.10"
predicates = "3"
git2 = "0.18"
sha2 = "0.10"
regex = "1.10"
serial_test = "3.0"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
